# s3k-c

./: .gitignore  LICENSE  README.md
cross/: ccomp-rv64imac.ini
examples/hello/: meson.build
examples/hello/subprojects/app0/: main.c
examples/hello/subprojects/app1/: main.c
examples/pingpong/: meson.build
examples/pingpong/subprojects/app0/: main.c
examples/pingpong/subprojects/app1/: main.c  meson.build
kernel/: meson.build
kernel/brc/: .gitignore  cap.br  cap_ops.br  channels.br  config.br  error.br  exception.br  interrupt.br  ipc.br  kernel.br  machine.br  message.br  modorder  monitor.br  pmp.br  proc.br  ptable.br  sched.br  syscall.br  trap.br  types.br  util.br  vreg.br
kernel/brc/capgen/: cap.br  cap.yml  capgen.py
kernel/include/: bint.h  csr.h  kassert.h  kinit.h  kstate.h  machine.h  preempt.h  proc.h  rtc.h  sched.h  syscall.h  trap.h  types.h
kernel/include/cap/: ops.h  util.h
kernel/plat/cheshire/: config.h  plat.c
kernel/plat/qemu_virt/: linker.ld  plat.c
kernel/src/: cap_ops.c  csr.c  exception.c  head.S  interrupt.c  kinit.c  kprint.c  kstate.c  proc.c  rtc.c  sched.c  syscall.c  trap.S  trap.c
kernel/src/cap/: ipc.c  monitor.c  ops.c  pmp.c  util.c
kernel/subprojects/: unity.wrap
kernel/test/: config.h  csr.c  kputc.c  main.c  meson.build  rtc.c  test.c  trap.c  utils.c
lib/: meson.build
lib/include/s3k/: syscall.h  types.h  util.h
lib/src/: s3k.c  syscall.c
projects/hello/: meson.build
projects/hello/subprojects/app0/: meson.build
